# quark-cli

./: .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  bootstrap.sh  docker-compose.ghcr.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
agent/: README.md  agent.json  main.py
docs/: PRD.md  SKILL_AGENT.md  architecture.md  cli-reference.md  configuration.md  docker.md  install.md  web-api.md
quark_cli/: __init__.py  api.py  cli.py  config.py  debug.py  display.py  guangya_api.py  history.py  keepalive.py  rename.py  scheduler.py  search.py  subscribe.py
quark_cli/bot/: __init__.py  lark_bot.py
quark_cli/commands/: account_cmd.py  config_cmd.py  drive_cmd.py  guangya_cmd.py  helpers.py  media_cmd.py  rss_cmd.py  search_cmd.py  share_cmd.py  sync_cmd.py  task_cmd.py  torrent_cmd.py
quark_cli/media/: __init__.py  autosave.py  base.py  parser.py  registry.py  sync.py
quark_cli/media/discovery/: __init__.py  base.py  cache.py  douban.py  naming.py  tmdb.py
quark_cli/rss/: __init__.py  actions.py  fetcher.py  manager.py  matcher.py  torrent_client.py
quark_cli/services/: __init__.py  account_service.py  discovery_service.py  drive_service.py  guangya_drive_service.py  guangya_sync.py  media_service.py  search_service.py
quark_cli/web/: __init__.py  app.py  deps.py
scripts/: config.example.json  install.sh  start.sh
skills/quark-cli/: SKILL.md
tests/: test_guangya_api.py  test_history.py  test_subscribe.py  test_sync.py
web/: index.html  package.json  tailwind.config.js  vite.config.js
web/src/: App.jsx  index.css
(+43 files in other folders)
