[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quark-cli"
version = "2.3.0"
description = "夸克网盘命令行工具 - 签到/搜索/转存/文件管理/影视中心 一站式 CLI"
readme = "README.md"
license = {text = "AGPL-3.0"}
requires-python = ">=3.8"
authors = [
    {name = "quark-cli"}
]
keywords = ["quark", "netdisk", "cli", "cloud-drive", "media", "fnos"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]
dev = [
    "pytest>=7.0",
]

[project.scripts]
quark-cli = "quark_cli.cli:main"

[project.urls]
Homepage = "https://github.com/Cp0204/quark-auto-save"
Documentation = "https://github.com/Cp0204/quark-auto-save/wiki"

[tool.setuptools.packages.find]
include = ["quark_cli*"]
